// Copyright 2018 The KubeSphere Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.


syntax = "proto3";

package kubesphere.alert;

option go_package = "pb";

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "protoc-gen-swagger/options/annotations.proto";
import "google/protobuf/timestamp.proto";


//0.Policy
//********************************************************************************************************
message ModifyPolicyByAlertRequest {
	string resource_search = 1;
	string alert_name = 2;
	string policy_name = 3;
	string policy_description = 4;
	string policy_config = 5;
	string creator = 6;
	string available_start_time = 7;
	string available_end_time = 8;
	string rs_type_id = 9;
}
message ModifyPolicyByAlertResponse {
	string alert_name = 1;
}

//1.Alert
//********************************************************************************************************
message ModifyAlertByNameRequest {
	string resource_search = 1;
	string alert_name = 2;
	bool disabled = 3;
	string policy_id = 4;
	string rs_filter_id = 5;
}
message ModifyAlertByNameResponse {
	string alert_name = 1;
}

message DeleteAlertsByNameRequest {
	string resource_search = 1;
	repeated string alert_name = 2;
}
message DeleteAlertsByNameResponse {
	repeated string alert_name = 1;
}

message AlertDetail {
	string alert_id = 1;
	string alert_name = 2;
	bool disabled = 3;
	google.protobuf.Timestamp create_time = 4;
	string running_status = 5;
	string alert_status = 6;
	string policy_id = 7;
	string rs_filter_name = 8;
	string rs_filter_param = 9;
	string rs_type_name = 10;
	string executor_id = 11;
	string policy_name = 12;
	string policy_description = 13;
	string policy_config = 14;
	string creator = 15;
	string available_start_time = 16;
	string available_end_time = 17;
	repeated string metrics = 18;
	uint32 rules_count = 19;
	uint32 positives_count = 20;
	string most_recent_alert_time = 21;
	string nf_address_list_id = 22;
}

message DescribeAlertDetailsRequest {
	string search_word = 1;
	string sort_key = 2;
	bool reverse = 3;
	uint32 offset = 4;
	uint32 limit = 5;

	string resource_search = 6;
	repeated string alert_id = 7;
	repeated string alert_name = 8;
	repeated bool disabled = 9;
	repeated string running_status = 10;
	repeated string policy_id = 11;
	repeated string creator = 12;
	repeated string rs_filter_id = 13;
	repeated string executor_id = 14;
}
message DescribeAlertDetailsResponse {
	uint32 total = 1;
	repeated AlertDetail alertdetail_set = 2;
}

message ResourceStatus {
	string resource_name = 1;
	string current_level = 2;
	uint32 positive_count = 3;
	uint32 cumulated_send_count = 4;
	uint32 next_resend_interval = 5;
	string next_sendable_time = 6;
	string aggregated_alerts = 7;
}

message AlertStatus {
	string rule_id = 1;
	string rule_name = 2;
	bool disabled = 3;
	uint32 monitor_periods = 4;
	string severity = 5;
	string metrics_type = 6;
	string condition_type = 7;
	string thresholds = 8;
	string unit = 9;
	uint32 consecutive_count = 10;
	bool inhibit = 11;
	string metric_name = 12;
	repeated ResourceStatus resources = 13;
	google.protobuf.Timestamp create_time = 14;
	google.protobuf.Timestamp update_time = 15;
}

message DescribeAlertStatusRequest {
	string search_word = 1;
	string sort_key = 2;
	bool reverse = 3;
	uint32 offset = 4;
	uint32 limit = 5;

	string resource_search = 6;
	repeated string alert_id = 7;
	repeated string alert_name = 8;
	repeated bool disabled = 9;
	repeated string running_status = 10;
	repeated string policy_id = 11;
	repeated string creator = 12;
	repeated string rs_filter_id = 13;
	repeated string executor_id = 14;
	repeated string rule_id = 15;
}
message DescribeAlertStatusResponse {
	uint32 total = 1;
	repeated AlertStatus alertstatus_set = 2;
}

//2.History
//********************************************************************************************************
message HistoryDetail {
	string history_id = 1;
	string history_name = 2;
	string rule_id = 3;
	string rule_name = 4;
	string event = 5;
	string notification_id = 6;
	string notification_status = 7;
	string severity = 8;
	string rs_type_name = 9;
	string rs_filter_name = 10;
	string metric_name = 11;
	string condition_type = 12;
	string thresholds = 13;
	string unit = 14;
	string alert_name = 15;
	string rs_filter_param = 16;
	string resource_name = 17;
	google.protobuf.Timestamp create_time = 18;
	google.protobuf.Timestamp update_time = 19;
}

message DescribeHistoryDetailRequest {
	string search_word = 1;
	string sort_key = 2;
	bool reverse = 3;
	uint32 offset = 4;
	uint32 limit = 5;

	string resource_search = 6;
	repeated string history_id = 7;
	repeated string history_name = 8;
	repeated string alert_name = 9;
	repeated string rule_name = 10;
	repeated string event = 11;
	repeated string rule_id = 12;
	repeated string resource_name = 13;
	bool recent = 14;
}
message DescribeHistoryDetailResponse {
	uint32 total = 1;
	repeated HistoryDetail historydetail_set = 2;
}


//=====================================================================================================================//
service AlertManagerCustom {
	//0.Policy
	//********************************************************************************************************
	rpc ModifyPolicyByAlert (ModifyPolicyByAlertRequest) returns (ModifyPolicyByAlertResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "patch policy"
		};
		option (google.api.http) = {
			patch: "/v1/policybyalert"
			body: "*"
		};
	}

	//1.Alert
	//********************************************************************************************************
	rpc ModifyAlertByName (ModifyAlertByNameRequest) returns (ModifyAlertByNameResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "modify alert by name"
		};
		option (google.api.http) = {
			patch: "/v1/alert"
			body: "*"
		};
	}

	rpc DeleteAlertsByName (DeleteAlertsByNameRequest) returns (DeleteAlertsByNameResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "delete alerts by name"
		};
		option (google.api.http) = {
			delete: "/v1/alert"
			body: "*"
		};
	}

	rpc DescribeAlertDetails (DescribeAlertDetailsRequest) returns (DescribeAlertDetailsResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "describe alert details"
		};
		option (google.api.http) = {
			get: "/v1/alert_detail"
		};
	}

	rpc DescribeAlertStatus (DescribeAlertStatusRequest) returns (DescribeAlertStatusResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "describe alert status"
		};
		option (google.api.http) = {
			get: "/v1/alert_status"
		};
	}


	//2.History
	//********************************************************************************************************
	rpc DescribeHistoryDetail (DescribeHistoryDetailRequest) returns (DescribeHistoryDetailResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "describe history detail"
		};
		option (google.api.http) = {
			get: "/v1/historydetail"
		};
	}
}
